--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.30.0
-streamlit-webrtc==0.44.0
-opencv-python==4.8.1.78
-numpy==1.26.0
-keras==2.13.1
-tensorflow==2.13.0
-gdown==4.7.1
-av==10.0.1
+streamlit
+streamlit-webrtc
+opencv-python
+numpy
+keras
+tensorflow
+gdown
+av
