--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ streamlit
 streamlit-webrtc
 opencv-python
 numpy
-tensorflow
-keras
-gdown
 requests
+keras
+tensorflow
+gdown
+streamlit-components
+pillow
 av
