--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.27.0
-streamlit-webrtc==0.50.0
-opencv-python-headless==4.8.1.78
-numpy==1.25.2
-requests==2.31.0
-keras==2.12.0
-tensorflow-cpu==2.12.0
-gdown==4.8.0
-av==11.0.0
-Pillow==10.1.0
+streamlit
+streamlit-webrtc
+opencv-python-headless
+numpy
+requests
+keras
+tensorflow-cpu
+gdown
+av
+Pillow
